<resources>
    <string name="app_name">Nilo</string>

    <string name="product_msg_loading">Preparando todo…</string>
    <string name="product_empty_cart">Carrito vacío</string>
    <string name="product_full_cart">Total: $%1$.2f USD</string>
    <string name="product_view_cart">Ver Carrito</string>

    <string name="cart_title">Carrito de compra</string>
    <string name="cart_pay">Pagar</string>

    <string name="detail_add_to_cart">Añadir al carrito</string>
    <string name="detail_quantity">Disponibles: %1$d</string>
    <string name="detail_total_price"><b>&lt;big>Total: $%1$.2f USD&lt;/big></b>&lt;br/>(%2$d x $%3$.2f)</string>

    <string name="order_track_shipment">Seguir envio</string>
    <string name="order_status">Estado: %1$s</string>
    <string name="order_id">ID: %1$s</string>
    <string name="order_chat_help">¿Necesitas ayuda?</string>
    <string name="order_title">Historial de compras</string>

    <string name="order_status_oredered">Pedido</string>
    <string name="order_status_preparing">Preparando</string>
    <string name="order_status_sent">Enviado</string>
    <string name="order_status_delivered">Entregado</string>
    <string name="order_status_unknown">Desconocido</string>
    
    <string name="track_title">Rastreo</string>
    <string name="hint_chat">Escribe algo…</string>
    <string name="chat_title">Soporte</string>

    <string name="notification_channel_id_default">"general "</string>
    <string name="notification_channel_name_default">"Generales"</string>

</resources>