<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272626"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clProgreso"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/common_padding_default"
        android:rotation="90"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_min"
            android:layout_marginBottom="@dimen/track_margin_bottom_progress"
            app:indicatorColor="@color/red_900"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:progress="34" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <CheckBox
        android:id="@+id/cbOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_check_box"
        android:text="@string/order_status_oredered"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="@color/white"
        android:textColorLink="@color/yellow_a700"
        android:buttonTint="@color/red_900"
        app:layout_constraintStart_toStartOf="@+id/clProgreso"
        app:layout_constraintTop_toTopOf="@+id/clProgreso" />

    <CheckBox
        android:id="@+id/cbPreparando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_check_box"
        android:text="@string/order_status_preparing"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="@color/white"
        android:buttonTint="@color/red_900"
        app:layout_constraintBottom_toTopOf="@+id/cbEnviando"
        app:layout_constraintStart_toStartOf="@+id/clProgreso"
        app:layout_constraintTop_toBottomOf="@+id/cbOrder" />

    <CheckBox
        android:id="@+id/cbEnviando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_check_box"
        android:text="@string/order_status_sent"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="@color/white"
        android:buttonTint="@color/red_900"
        app:layout_constraintBottom_toTopOf="@id/cbEntregado"
        app:layout_constraintStart_toStartOf="@+id/clProgreso"
        app:layout_constraintTop_toBottomOf="@+id/cbPreparando" />

    <CheckBox
        android:id="@+id/cbEntregado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_check_box"
        android:text="@string/order_status_delivered"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="@color/white"
        android:buttonTint="@color/red_900"
        app:layout_constraintBottom_toBottomOf="@+id/clProgreso"
        app:layout_constraintStart_toStartOf="@+id/clProgreso" />

</androidx.constraintlayout.widget.ConstraintLayout>