<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true">

    <ImageView
        android:id="@+id/imgProducto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/gray_100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="16:9"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        android:layout_marginTop="@dimen/common_padding_default"
        tools:text="Nombre del producto"
        android:textColor="@color/colorOnSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProducto"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/efab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detail_add_to_cart"
        android:textAlignment="center"
        app:icon="@drawable/ic_add_shopping_cart"
        app:iconGravity="textEnd"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:backgroundTint="@color/yellow_a700"
        app:layout_constraintStart_toStartOf="@id/tvNombre"
        app:layout_constraintEnd_toEndOf="@id/tvNombre"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:id="@+id/ibRest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_remove_circle"
        android:layout_marginBottom="@dimen/common_padding_medium"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="@id/tvNombre"
        app:layout_constraintBottom_toTopOf="@+id/efab"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNuevaCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_min"
        app:layout_constraintStart_toEndOf="@+id/ibRest"
        app:layout_constraintTop_toTopOf="@+id/ibRest"
        app:layout_constraintBottom_toBottomOf="@+id/ibRest"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNuevaCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:textAlignment="center"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:textColor="@color/colorOnSecondary"
            tools:text="5"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/ibSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_circle"
        android:background="?attr/selectableItemBackground"
        android:layout_marginStart="@dimen/common_padding_min"
        app:layout_constraintStart_toEndOf="@+id/tilNuevaCantidad"
        app:layout_constraintTop_toTopOf="@+id/ibRest"
        app:layout_constraintBottom_toBottomOf="@+id/ibRest"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCantidad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:text="@string/detail_quantity"
        android:textColor="@color/colorOnSecondary"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        app:layout_constraintStart_toStartOf="@+id/tvNombre"
        app:layout_constraintEnd_toEndOf="@+id/tvNombre"
        app:layout_constraintBottom_toTopOf="@+id/ibRest"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvtotalPrecio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detail_total_price"
        android:textColor="@color/colorOnSecondary"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:layout_marginStart="@dimen/common_padding_default"
        app:layout_constraintStart_toEndOf="@+id/ibSum"
        app:layout_constraintEnd_toEndOf="@+id/tvNombre"
        app:layout_constraintTop_toTopOf="@+id/ibRest"
        app:layout_constraintBottom_toBottomOf="@+id/ibRest"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/common_padding_default"
        app:layout_constraintBottom_toTopOf="@+id/tvCantidad"
        app:layout_constraintEnd_toEndOf="@id/tvNombre"
        app:layout_constraintStart_toStartOf="@id/tvNombre"
        app:layout_constraintTop_toBottomOf="@id/tvNombre">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?attr/textAppearanceBody1"
            tools:text="Descripcion del producto"
            android:textColor="@color/colorOnSecondary"/>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>